--- a/WebApi/ClientApp/package.json
+++ b/WebApi/ClientApp/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.8.5",
     "react-redux": "^5.1.1",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^2.1.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3"
